# taller-de-docker

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yaml
containers/: index.html
data/: index.html
docker-compose/: index.html
dockerfile/: index.html
docs/: .pages  containers.md  data.md  docker-compose.md  dockerfile.md  extra.css  images.md  index.md  installation.md  introduction.md  tips.md  wordpress.md
docs/stylesheets/: extra.css
images/: index.html
installation/: index.html
introduction/: index.html
search/: search_index.json
tips/: index.html
wordpress/: index.html
